scrollbar fixed width

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@
 
     body {
         min-height: 100vh;
-        max-width: 100vw;
+        max-width: 100%;
         overflow-x: clip;
         text-rendering: optimizeSpeed;
         font-weight: 500;
@@ -85,9 +85,24 @@
     }
 
     /* custom scrollbar */
-    ::-webkit-scrollbar {
-        width: 0.5rem;
+
+    body {
+        scrollbar-gutter: stable both-edges;
     }
+
+    ::-webkit-scrollbar {
+        /* width: clamp(0.1vw + 1px, 0.3vw + 2px, 0.5vw + 2px);
+        min-width: 1px; */
+        min-width: 100%;
+    }
+
+    /* @media screen and (min-width: 768px) {
+        ::-webkit-scrollbar {
+            width: clamp(0.2vw + 6px, 0.3vw + 6px, 0.5vw + 6px);
+            width: 0.5vw;
+            min-width: 6px;
+        }
+    } */
 
     ::-webkit-scrollbar-track {
         @apply bg-primary-600;
